feat: Add new `ReadOnly` property that can be used to mark the QueryBuilder as readonly. A class, `.read-only` is also added to the root element

--- a/src/styles/runtime.css
+++ b/src/styles/runtime.css
@@ -91,3 +91,9 @@
     font-size: 12px !important;
     height: 30px !important;
 }
+
+/** Hide buttons in read-only mode */
+.query-builder.read-only .btn.btn-danger,
+.query-builder.read-only .group-actions .btn-success {
+    display: none;
+}
